=== Opus Primus changelog.txt ===
Last revised Rare Disease Day, 2015
Please note, the Opus Primus copyright can be found at the end of this file.

= Version 1.3.1 =
* Released ...

= Code =
* Added `get_the_posts_pagination` for navigation between pages of posts
* Added `hide_category_widget_list_items` method and related hook
* Added some escaping sanitization and linked Featured Image to post via the post ID
* Changed method to return the Featured Thumbnail versus outputting it
* Changed from using `get_the_time` to `date_i18n` for `OpusPrimusImages::exif_timestamp` method
* Extracted code from `featured_thumbnail` method to create `featured_thumbnail_single_view` method

= CSS =
* Added `=== Screen Reader Text ===` section
* Incorporated WordPress recommended styles for `.screen-reader-text` class
* Added `h5.comments-link` definition to provide a better aesthetic location

= Miscellaneous =
* Added `opus_featured_thumbnail_single_view_portrait` filter hook and updated `hooks-filters.txt`
* Begin removal of extraneous end of structure comments ...
* Inline documentation clean-up and re-organization
* Updated `hooks-filters.txt` file

/** ------------------------------------------------------------------------- */
== Version 1.3 ==
* Released November 2014

= Code =
* Added `post-title-link` wrapper class to better manage Post Title output
* Added WordPress HTML5 markup support for search form, comment form, comment list, and caption
* Added sanity checks to ensure constants are not already defined
* Added `OpusPrimusRouter` class to replace path and URL CONSTANTS
* Added Child-Theme "slug" for easier customizations
* Added empty hooks before and after showing the breadcrumbs
* Added OpusPrimusComments class methods to `functions.php` to work-around duplicate output issue
* Added checks for Child-Theme and relevant references to `opus_primus_support_comment`
* Better code organization to only load classes when needed