@@ -46,9 +46,10 @@
  * Updated "Table of Contents"
  *
  * @version	1.3.1
- * @date	February 26, 2015
+ * @date	March 1, 2015
  * Added `=== Screen Reader Text ===` section
  * Added `h5.comments-link` definition to provide a better aesthetic location
+ * Added styling to navigation for moving within a single post's pages
  */
 
 /** Table of Contents ------------------------------------------------------- */
@@ -67,6 +68,7 @@
  *
  * === Navigation ===
  * Pagination Method
+ * Posts Pagination
  *
  * === Post Elements ===
  * Meta Byline
@@ -977,7 +979,8 @@ ul.page-numbers li {
 	display: inline;
 }
 
-ul.page-numbers li a {
+ul.page-numbers li a,
+ul.page-numbers a li {
 	border: 1px solid #efefef;
 	display: block;
 	float: left;
@@ -999,6 +1002,15 @@ ul.page-numbers li span.dots {
 	float: left;
 	margin-right: 7px;
 	padding: 0 9px;
+}
+
+/** Posts Pagination -------------------------------------------------------- */
+div.navigation-pagination.opus-link-pages > ul.page-numbers {
+	margin: 0;
+}
+
+span.opus-link-pages-preface {
+	vertical-align: super;
 }
 
 /** Post Link --------------------------------------------------------------- */
